[package]
name = "find_tx_hash_prefix"
version = "0.1.0"
edition = "2021"
default-run = "find_tx_hash_prefix"

[dependencies]
ethers = "2.0"
dotenv = "0.15"
rlp = "0.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
bytes = "1.6"
num_cpus = "1.16"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true